# itzn_api

./: .env  .gitignore  README.md  itzn.db  main.py  pyproject.toml  requiments.txt  setup_calendar.py
app/: main.py
app/api/: agenda_routes.py  reserva_routes.py
app/core/: annotateds.py  config.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: User.py  agendamento.py  reserva.py  user.py
app/schemas/: agenda.py  filter.py  reserva.py
app/services/: __init__.py  agenda_service.py  google_calendar.py  reserva_service.py
app/sevices/: __init__.py  agenda_service.py  reserva_service.py
migrations/: env.py
migrations/versions/: 3931926da445_adicionando_campo_status_em_reserva.py  6d014bdfaf8b_migracao_inicial.py  72554d21d2da_adicionando_autor_em_agenda_e_reserva.py  7928ed73092d_adicionando_campo_changed_by_em_reserva.py  809ca7a0e6fc_adicionando_campo_changed_em_reserva.py  9ac036e6b75d_traduzindo_campos_e_adicionando_campo_.py  abf6af36a014_adicionando_campo_id_do_google_em_.py  ae51261704b2_adicionando_campo_cancelado_em_.py  ba10ac81f0f9_removendo_horario_de_reserva.py
models/: Agendamento.py  Reserva.py  User.py
